<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TTS</string>

    <string name="tts_sample_default">这是语音合成示例。This is an example of speech synthesis.</string>
    <string name="tts_sample_en">This is an example of speech synthesis.</string>
    <string name="tts_sample_zh">这是语音合成示例。</string>
    <string name="tts_sample_ru">Это пример синтеза речи.</string>
    <string name="tts_sample_hi">यह बात सिंटेस का एक उदाहरण है.</string>
    <string name="tts_sample_tr">Bu konuşma sintezi örneğindir.</string>
    <string name="tts_sample_de">Dies ist ein Beispiel für die Sprachsynthese.</string>
    <string name="tts_sample_it">Questo è un esempio di sintesi vocale.</string>
    <string name="tts_sample_ja">これは音声合成の例である。</string>
    <string name="tts_sample_fr" tools:ignore="Typos">Voici un exemple de synthèse vocale.</string>
    <string name="tts_sample_nl">Dit is een voorbeeld van spraaksynthese.</string>
    <string name="tts_sample_pt">Este é um exemplo de síntese Da fala.</string>
    <string name="tts_sample_es">Este es un ejemplo de síntesis de voz.</string>
    <string name="tts_sample_ko">이것 은 음성 합성 예시 이다.</string>
    <string name="set_tts">设置TTS</string>
    <string name="kill_battery">电池优化</string>
    <string name="use_custom_language">自定义</string>
    <string name="tts_voice_style">讲话风格(无效值将将忽略)</string>
    <string name="tts_voice_style_degree">说话风格的强度</string>
    <string name="test">测试</string>
    <string name="novel_test">大奉京兆府，监牢。      许七安幽幽醒来，嗅到了空气中潮湿的腐臭味，令人轻微的不适，胃酸翻涌。      这扑面而来的臭味是怎么回事，家里的二哈又跑床上拉屎来了....根据熏人程度，怕不是在我头顶拉的....      许七安家里养了一条狗，品种哈士奇，俗称二哈。      北漂了十年，孤孤单单的，这人啊，寂寞久了，难免会想养条狗里慰藉和消遣....不是肉体上。      睁开眼，看了下周遭，许七安懵了一下。      石块垒砌的墙壁，三个碗口大的方块窗，他躺在冰凉的破烂草席上，阳光透过方块窗照射在他胸口，光束中尘糜浮动。      我在哪？      许七安在怀疑人生般的迷茫中沉思片刻，然后他真的怀疑人生了。      我穿越了....      狂潮般的记忆汹涌而来，根本不给他反应的机会，强势插入大脑，并快速流动。      许七安，字宁宴，大奉王朝京兆府下辖长乐县衙的一名捕快。月俸二两银子一石米。      父亲是老卒，死于十九年前的‘山海战役’，随后，母亲也因病去世......想到这里，许七安稍稍有些欣慰。      众所周知，父母双亡的人都不简单。      “没想到重活了，还是逃不掉当警察的宿命？”许七安有些牙疼。      他前世是警校毕业，成功进入体制，捧起了金饭碗。      可是，许七安虽然走了父母替他选择的道路，他的心却不在人民公仆这个职业上。      他喜欢无拘无束，喜欢自由，喜欢纸醉金迷，喜欢季羡林在日记本里的一句话：——      于是悍然辞职，下海经商。      “可我为什么会在监狱里？”      他努力消化着记忆，很快就明白自己眼下的处境。      许七安自幼被二叔养大，因为常年习武，每年要吃掉一百多两银子，因此被婶婶不喜。      18岁修炼到炼精巅峰后，便停滞不前，迫于婶婶的压力，他搬离许宅独自居住。      通过叔叔的关系，在衙门里混了个捕快的差事，原本日子过的不错，谁想到.....      三天前，那位在御刀卫当差的七品绿袍二叔，护送一批税银到户部，途中出了意外，税银丢失。      整整十五万两白银。      朝野震动，圣上勃然大怒，亲自下令，许平志于五日后斩首，三族亲属连坐，男丁发配边疆，女眷送入教坊司。      作为许平志的亲侄儿，他被解除了捕快职务，打入京兆府大牢。      两天！      再有两天时间，他就要被流放到凄苦荒凉的边陲之地，在劳碌中度过下半辈子。      “开局就是地狱模式啊....”许七安脊背发凉，心跟着凉了半截。      这个世界处在封建王朝统治的状态，没有人权的，边陲是什么地方？      荒凉，气候恶劣，大部分被发配边境的犯人，都活不过十年。而更多的人，还没到边陲就因为各种意外、疾病，死于途中。      想到这里，许七安头皮一炸，寒意森森。      “系统？”      沉默了片刻，寂静的监牢里响起许七安的试探声。      系统不搭理他。      “系统....系统爸爸，你出来啊。”许七安声音透着急切。      寂静无声。      没有系统，竟然没有系统！      这意味着他几乎没办法改变现状，两天后，他就要戴上镣铐和枷锁，被送往边陲，以他的体魄，应该不会死于途中。      但这并不是好处，在充当工具人的生涯里被压榨劳动力，最后死去.....      太可怕，太可怕了！      许七安对穿越古代这件事的美好幻想，如泡沫般破碎，有的只有焦虑和恐惧。      “我必须想办法自救，我不能就这样狗带。”      许七安在狭小的监牢里踱步打转，像是热锅上的蚂蚁，像是掉落陷阱的野兽，苦思对策。      我是炼精巅峰，身体素质强的吓人.....但在这个世界属于不屈白银，越狱是不可能的.....      靠宗族和朋友？      许家并非大族，族人分散各地，而整整十五万两的税银被劫，谁敢在这个节骨眼上求情？      根据大奉律法，将功补过，便可免除死罪！      除非找回银子....      许七安的眼睛猛的亮起，像极了濒临溺毙的人抓住了救命稻草。      他是正儿八经的警校毕业，理论知识丰富，逻辑清晰，推理能力极强，又阅读过无数的案例。      或许可以试着从破案这方面入手，追回银子，戴罪立功。      但随后，他眼里的光芒黯淡。      想要破案，首先要看卷宗，明白案件的详细经过。之后才是调查、破案。      如今他深陷大牢，叫天天不应叫地地不灵，两天后就送去边陲了！      无解！      许七安一屁股坐在地上，双目失神。      他昨儿在酒吧喝的伶仃大醉，醒来就在监狱里，想来可能是酒精中毒死掉了才穿越吧。      老天爷赏赐了穿越的机会，不是让他重活，是觉得他死的太轻松了？      在古代，发配是仅次于死刑的重刑。      上辈子虽然被社会毒打，好歹活在一个太平盛世，你说重生多好啊，二话不说，偷了父母的积蓄就去买房子。      然后配合老妈，把爱炒股的老爹的手打断，让他当不成韭菜。      这时，幽暗走廊的尽头传来锁链划动的声音，应该是门打开了。      继而传来脚步声。      一名狱卒领着一位神容憔悴的俊俏书生，在许七安的牢门前停下。      狱卒看了书生一眼：“半柱香时间。”      书生朝狱卒拱手作揖，目送狱卒离开后，他转过身来正面对着许七安。      书生穿着月白色的袍子，乌黑的长发束在玉簪上，模样甚是俊俏，剑眉星目，嘴唇很薄。      许七安脑海里浮现此人的相关记忆。      许家二郎，许新年。      二叔的亲儿子，许七安的堂弟，今年秋闱中举。      许新年平静的直视着他：“押送你去边陲的士卒收了我三百两，这是我们家仅剩的银子了，你安心的去，途中不会有意外的。”      “那你呢？”许七安鬼使神差的说出这句话，他记得原主和这位堂弟的关系并不好。      因为婶婶讨厌他的关系，许家除了二叔，其他人并不怎么待见许七安。至少堂弟堂妹不会表现的与他太过亲近。      除此之外，在原主的记忆里，这位堂弟还是个擅长口吐芬芳的嘴强王者。      许新年不耐烦道：“我已被革除功名，但有书院师长护着，不需要发配。管好你自己就行了。去了边陲，收敛脾气，能活一年是一年。”      许新年在京都赫赫有名的白鹿书院求学，颇受重视，又是新晋举人。因此，二叔出事后，他没有被下狱，但不允许离开京都，多天来一直各方奔走。      许七安沉默了，他不觉得许新年会比自己更好，恐怕不只是革除功名，还得入贱籍，子子孙孙不得科举，不得翻身。      且，两天后，许家女眷会被送入教坊司，受到凌辱。      许新年是读书人，他如何还有脸在京城活下去？或许被发配边疆才是更好的选择。      许七安心里一动，往前扑了几步，双手扣住铁栅栏：“你想自尽？！”      不受控制的，心里涌起了悲伤.....我明明都不认识他。      许新年面无表情的拂袖道：“与汝何干。”      顿了顿，他目光微微下移几寸，不与堂哥对视，神色转为柔和：“活下去。”      说罢，他决然的踏步离开！      “等等！”许七安手伸出栅栏，抓住他的衣袖。      许新年顿住，沉默的看着他。      “你能弄到卷宗吗？税银丢失案的卷宗。”</string>
    <string name="tts_sample_ar">هذا هو مثال على تركيب الكلام</string>
    <string name="raw_16khz_16bit_mono_pcm">Raw16Khz16BitMonoPcm</string>
    <string name="raw_16khz_16bit_mono_truesilk">Raw16Khz16BitMonoTrueSilk</string>
    <string name="raw_24khz_16bit_mono_pcm">Raw24Khz16BitMonoPcm</string>
    <string name="raw_48khz_16bit_mono_pcm">Raw48Khz16BitMonoPcm</string>
    <string name="raw_8khz_16bit_mono_pcm">Raw8Khz16BitMonoPcm</string>
    <string name="raw_8khz_8bit_mono_mulaw">Raw8Khz8BitMonoMULaw</string>
    <string name="check_update">检查更新</string>
    <string name="battery_optimizations">电池优化</string>
    <string name="audio_format">音频流格式</string>


</resources>